# database_security_gateway_openresty

./: 新版数据库网关使用说明.docx
mysql_proxy/conf/: globalConfig.json
mysql_proxy/luajit/lib/: libluajit-5.1.so.2.1.0
mysql_proxy/nginx/conf/: nginx.conf  nginx.conf_bak
mysql_proxy/nginx/mylua/: deal_http_msg.lua  init_worker.lua  mysql_audit_logs.lua  mysql_const_data.lua  mysql_proxy_app.lua  mysql_proxy_client_message.lua  mysql_proxy_server_message.lua  mysql_proxy_timer_logs.lua  parse_opcode_msg.lua  utils.lua
pgsql_proxy/conf/: globalConfig.json
pgsql_proxy/nginx/conf/: nginx.conf  nginx.conf_bak
pgsql_proxy/nginx/mylua/: deal_http_msg.lua  init.lua  init_worker.lua  parse_opcode_msg.lua  pgsql_audit_logs.lua  pgsql_const_data.lua  pgsql_proxy_app.lua  pgsql_proxy_client_message.lua  pgsql_proxy_server_message.lua  pgsql_proxy_timer_logs.lua  utils.lua
thrift_server/: CMakeLists.txt  ConfigInit.cpp  ConfigInit.h  FileReader.cpp  IHttpBase.cpp  IHttpBase.h  Messages.thrift  ThriftPlatformMsg.cpp  ThriftPlatformMsg.h  ThriftServer.cpp  ThriftServer.h  main.cpp  opcode.h  thriftServerConfig.ini
thrift_server/gen-cpp/: MessageService.cpp  MessageService.h  Messages_constants.cpp  Messages_constants.h  Messages_types.cpp  Messages_types.h
